# cc-vault-test

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/epics/fake-ocr-service/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  10.md  11.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/epics/fake-ocr-service/updates/2/: progress.md
.claude/prds/: fake-ocr-service.md
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/core/: config.py  logging.py  middleware.py
app/routers/: health.py  ocr.py
app/services/: ocr.py
tests/: conftest.py
tests/integration/: test_determinism.py  test_health_endpoint.py  test_no_real_ocr_imports.py  test_ocr_endpoint.py  test_request_id.py
tests/unit/: test_ocr_service.py
