[project]
name = "fake-ocr-service"
version = "0.1.0"
description = "Deterministic mock OCR service exposing POST /v1/ocr and GET /v1/health behind a production-shaped FastAPI scaffold; no real OCR engine."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
